# krita-webtoon-export

./: .gitignore  README.md  pyproject.toml
src/krita_webtoon_export/: __init__.py  cli.py
src/krita_webtoon_export/core/: __init__.py  encode.py  pipeline.py  resize.py  split.py
src/krita_webtoon_export/plugin/: __init__.py  settings.py
tests/: test_encode.py  test_pipeline.py  test_resize.py  test_split.py
